--- a/public_html/portada.html
+++ b/public_html/portada.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="estilos.css">
-        
+        <script src="scripts.js"></script>
     </head>
     <body>
         <div id="cabecera1">
@@ -43,5 +43,93 @@
             </nav>
         </div>
         
+        <section class="seccion_principal_portada" id="seccion_principal_portada">
+            <article class="articulo_principal_portada" id="articulo_principal_portada">
+                <img src="images/spiderman_ps4_portada.jpg" alt="Spiderman ps4 portada">
+                <header class="cabecera_articulo_principal" id="cabecera_articulo_principal">
+                    <h1>Review</h1>
+                </header>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tristique 
+                    ultrices risus eu consequat.  
+                </p>
+            </article>
+            <article class="articulo_secundario_portada" id="articulo_secundario_portada">
+                <img src="images/farcry5_pc_portada.jpg" alt="Farcry5 pc portada">
+                <header class="cabecera_articulo_secundario" id="cabecera_articulo_secundario">
+                    <h2>Critica</h2>
+                </header>
+                <p>
+                    Fusce malesuada iaculis mi, a rhoncus elit volutpat vel. Mauris accumsan 
+                    lectus non orci facilisis, vel suscipit sapien accumsan. 
+                </p>
+            </article>
+            <article class="articulo_secundario_portada" id="articulo_secundario_portada">
+                <img src="images/barbie_3ds_portada.jpg" alt="Barbie 3ds portada">
+                <header class="cabecera_articulo_secundario" id="cabecera_articulo_secundario">
+                    <h2>Review</h2>
+                </header>
+                <p>
+                    Fusce malesuada iaculis mi, a rhoncus elit volutpat vel. Mauris accumsan 
+                    lectus non orci facilisis, vel suscipit sapien accumsan. 
+                </p>
+            </article>
+            <article class="articulo_secundario_portada" id="articulo_secundario_portada">
+                <img src="images/fifa19_xbone_portada.jpg" alt="Fifa19 xbone portada">
+                <header class="cabecera_articulo_secundario" id="cabecera_articulo_secundario">
+                    <h2>Review</h2>
+                </header>
+                <p>
+                    Fusce malesuada iaculis mi, a rhoncus elit volutpat vel. Mauris accumsan 
+                    lectus non orci facilisis, vel suscipit sapien accumsan. 
+                </p>
+            </article>
+            <article class="articulo_secundario_portada" id="articulo_secundario_portada">
+                <img src="images/godofwar_ps4_portada.jpg" alt="godofwar ps4 portada">
+                <header class="cabecera_articulo_secundario" id="cabecera_articulo_secundario">
+                    <h2>Avances</h2>
+                </header>
+                <p>
+                    Fusce malesuada iaculis mi, a rhoncus elit volutpat vel. Mauris accumsan 
+                    lectus non orci facilisis, vel suscipit sapien accumsan. 
+                </p>
+            </article>
+        </section>
+        <div class="pestaña_vertical">
+            <button class="enlace_pestaña" onclick="openCity(event, 'Ultimos lanzamientos')" id="pestaña_principal_pordefecto">Ultimos lanzamientos</button>
+            <button class="enlace_pestaña" onclick="openCity(event, 'Por llegar')">Por llegar</button>
+            <button class="enlace_pestaña" onclick="openCity(event, 'Lo más visto')">Lo más visto</button>
+        </div>
+
+        <div id="Ultimos_lanzamientos" class="contenido_pestaña">
+            <h3>Ultimos lanzamientos</h3>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </div>
+
+        <div id="Por_llegar" class="contenido_pestaña">
+            <h3>Por llegar</h3>
+            <ul>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+            </ul>
+        </div>
+
+        <div id="Lo_mas_visto" class="contenido_pestaña">
+            <h3>Lo más visto</h3>
+            <ul>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+            </ul>
+        </div>
+        <footer>
+            <p>Copyright GAMIEW 2018-2019<p> 
+            <p>Información de contacto: <a href="mailto:1234@gggmail.com">mailto:1234@gggmail.com</a>.</p>    
+        </footer>
     </body>
 </html>
